[gd_scene load_steps=9 format=3 uid="uid://daw1a0kjrh2fc"]

[ext_resource type="Script" uid="uid://cn527sq1pskl2" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://dneop8rrlbspy" path="res://graphics/player/player.png" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://rg6ytu5k3go7" path="res://graphics/decals/white.png" id="3_gmlin"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 9.14397

[sub_resource type="Gradient" id="Gradient_gmlin"]
colors = PackedColorArray(0.117647, 1, 1, 0.662745, 0.541176, 1, 1, 0.517647)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lvxji"]
gradient = SubResource("Gradient_gmlin")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lvxji"]
emission_shape = 1
emission_sphere_radius = 23.4
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0.117647, 1, 1, 0.384314)
color_ramp = SubResource("GradientTexture1D_lvxji")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gmlin"]
polygon = PackedVector2Array(-89, 14, -95, 8, -98, -4, -97, -12, -97, -20, -91, -32, -88, -39, -81, -46, -67, -47, -64, -48, -65, -52, -60, -55, -50, -58, -49, -53, -44, -58, -28, -60, -25, -58, -16, -62, -11, -60, -7, -57, -3, -53, -2, -48, 5, -44, 8, -39, 8, -35, 12, -29, 24, -27, 39, -12, 45, -11, 50, -12, 61, -5, 72, -3, 76, 1, 86, 2, 88, 4, 84, 7, 86, 8, 91, 5, 96, 9, 97, 22, 94, 30, 91, 33, 86, 31, 83, 31, 85, 35, 82, 36, 75, 37, 72, 34, 70, 36, 64, 41, 59, 44, 60, 49, 57, 52, 28, 53, 23, 51, 21, 44, 19, 41, 14, 40, 8, 42, 5, 38, 3, 42, -4, 44, -11, 46, -24, 53, -35, 57, -41, 58, -46, 61, -53, 60, -56, 59, -60, 60, -69, 56, -73, 50, -75, 43, -79, 40, -81, 34, -84, 31, -90, 22, -90, 18, -88, 18)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_dovo2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-35, -1)
rotation = 1.5708
scale = Vector2(7, 7)
shape = SubResource("CircleShape2D_dovo2")

[node name="PlayerImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_g2els")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPostions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="StartPostions"]
position = Vector2(92, 18)

[node name="Marker2D2" type="Marker2D" parent="StartPostions"]
position = Vector2(90, 10)

[node name="Marker2D3" type="Marker2D" parent="StartPostions"]
position = Vector2(90, 27)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(94, 19)
emitting = false
texture = ExtResource("3_gmlin")
lifetime = 0.2
one_shot = true
process_material = SubResource("ParticleProcessMaterial_lvxji")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_gmlin")

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
